	  Gong.
	* arch/arm/src/stm32/up_eth.c:  Add logic specifically for the
	  DM9161 PHY.  If the DM9161 failed to initialize, then use the
	  up_sysemreset() logic to reset the MCU.  Contributed by Darcy
	  Gong.
	* arch/arm/src/stm32/stm32_gpio.c:  Add missing logic to set bit
	  for SPI3 remap.  This fixes the XPT2046 touchscreen driver using
	  drivers/input/ads7843.c
	* configs/shenzhou/src/up_ssd1289.c:  Fix naming error in
	  conditional compilation.
	* configs/shenzhou/nxwm/defconfig:  Disable reading from the LCD.
	  This does not work.  The hardware and the driver support the
	  capability, but there is some bug that causes memory corruption.
	  The work around for now:  Just disable reading from the LCD.
	* drivers/lcd/ssd1289.c:  Add some logic to reduce the amount of
	  output when CONFIG_DEBUG_LCD is enabled.
	* configs/shenzhou/nxwm/defconfig:  Bug found and fixed... The
	  original configuration had too much stuff turned on.  Reducing
	  stack sizes, some features, and buffer sizes made the
	  configuration reliable (Reading from the LCD is still disabled).
	* net/uip/uip_icmpping.c:  Fix problem that prevented ping from
	  going outside of local network.  Submitted by Darcy Gong

6.23 2012-09-29 Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32_rng.c, chip/stm32_rng.h, and other files:
	  Implementation of /dev/random using the STM32 Random Number
	  Generator (RNG).
	* board.h file for shenzhou, fire-stm32v2, and olimex-stm32-p107:
	  Add frequencies for HSE, HSI, LSE, and LSI.  These are needed
	  by the STM32 watchdog driver.
	* CONFIG_EXAMPLES_*: To make things consistent, changed all occurrences
	  of CONFIG_EXAMPLE_* to CONFIG_EXAMPLES_*.
	* drivers/mtd/w25.c and configs/*/src/up_w25.c:  Several fixes for the
	  W25 SPI FLASH.
	* configs/*/Make.defs:  All buildroot tools now use the extension
	  xxx-nuttx-elf- vs. xxx-elf-
	* configs/shenzhou/*/Make.defs:  Now uses the new buildroot 4.6.3
	  EABI toolchain.
