@@ -1,7 +1,7 @@
 ############################################################################
 # configs/eagle100/nxflat/Make.defs
 #
-#   Copyright (C) 2009 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2009, 2012 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -40,36 +40,36 @@ include ${TOPDIR}/tools/Config.mk
 #   make                         -- Will build for the devkitARM toolchain
 #   make CROSSDEV=arm-eabi-      -- Will build for the devkitARM toolchain
 #   make CROSSDEV=arm-none-eabi- -- Will build for the CodeSourcery toolchain
-#   make CROSSDEV=arm-nuttx-elf- -- Will build for the NuttX buildroot toolchain
+#   make CROSSDEV=arm-nuttx-elf- -- Will build for the NuttX OABI buildroot toolchain
 
-CROSSDEV		= arm-eabi-
-CC			= $(CROSSDEV)gcc
-CXX			= $(CROSSDEV)g++
-CPP			= $(CROSSDEV)gcc -E
-LD			= $(CROSSDEV)ld
-AR			= $(CROSSDEV)ar rcs
-NM			= $(CROSSDEV)nm
-OBJCOPY			= $(CROSSDEV)objcopy
-OBJDUMP			= $(CROSSDEV)objdump
+CROSSDEV			= arm-eabi-
+CC					= $(CROSSDEV)gcc
+CXX					= $(CROSSDEV)g++
+CPP					= $(CROSSDEV)gcc -E
+LD					= $(CROSSDEV)ld
+AR					= $(CROSSDEV)ar rcs
+NM					= $(CROSSDEV)nm
+OBJCOPY				= $(CROSSDEV)objcopy
+OBJDUMP				= $(CROSSDEV)objdump
 
-MKNXFLAT		= mknxflat
-LDNXFLAT		= ldnxflat
+MKNXFLAT			= mknxflat
+LDNXFLAT			= ldnxflat
 
 ARCHCCVERSION		= ${shell $(CC) -v 2>&1 | sed -n '/^gcc version/p' | sed -e 's/^gcc version \([0-9\.]\)/\1/g' -e 's/[-\ ].*//g' -e '1q'}
-ARCHCCMAJOR		= ${shell echo $(ARCHCCVERSION) | cut -d'.' -f1}
+ARCHCCMAJOR			= ${shell echo $(ARCHCCVERSION) | cut -d'.' -f1}
 
 ifeq ($(CROSSDEV),arm-nuttx-elf-)
-  MKDEP			= $(TOPDIR)/tools/mkdeps.sh
+  MKDEP				= $(TOPDIR)/tools/mkdeps.sh
   ARCHCPUFLAGS		= -mtune=cortex-m3 -march=armv7-m -mfloat-abi=soft
   ARCHINCLUDES		= -I. -isystem $(TOPDIR)/include
   ARCHXXINCLUDES	= -I. -isystem $(TOPDIR)/include -isystem $(TOPDIR)/include/cxx
   ARCHSCRIPT		= -T$(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/nxflat/ld.script
   MAXOPTIMIZATION	= -Os
 else
-  WINTOOL		= y
-  DIRLINK 		= $(TOPDIR)/tools/winlink.sh
-  DIRUNLINK		= $(TOPDIR)/tools/unlink.sh
-  MKDEP			= $(TOPDIR)/tools/mknulldeps.sh
+  WINTOOL			= y
+  DIRLINK 			= $(TOPDIR)/tools/winlink.sh
+  DIRUNLINK			= $(TOPDIR)/tools/unlink.sh
+  MKDEP				= $(TOPDIR)/tools/mknulldeps.sh
   ARCHCPUFLAGS		= -mcpu=cortex-m3 -mthumb -mfloat-abi=soft
   ARCHINCLUDES		= -I. -isystem "${shell cygpath -w $(TOPDIR)/include}"
   ARCHXXINCLUDES	= -I. -isystem "${shell cygpath -w $(TOPDIR)/include}" -isystem "${shell cygpath -w $(TOPDIR)/include/cxx}"
@@ -83,42 +83,42 @@ else
   ARCHOPTIMIZATION	= $(MAXOPTIMIZATION) -fno-strict-aliasing -fno-strength-reduce -fomit-frame-pointer
 endif
 
-ARCHCFLAGS		= -fno-builtin
+ARCHCFLAGS			= -fno-builtin
 ARCHCXXFLAGS		= -fno-builtin -fno-exceptions
 ARCHWARNINGS		= -Wall -Wstrict-prototypes -Wshadow
 ARCHWARNINGSXX		= -Wall -Wshadow
-ARCHDEFINES		=
+ARCHDEFINES			=
 ARCHPICFLAGS		= -fpic -msingle-pic-base -mpic-register=r10
 
-CFLAGS			= $(ARCHCFLAGS) $(ARCHWARNINGS) $(ARCHOPTIMIZATION) \
-			  $(ARCHCPUFLAGS) $(ARCHINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES) -pipe
-CPICFLAGS		= $(ARCHPICFLAGS) $(CFLAGS)
-CXXFLAGS		= $(ARCHCXXFLAGS) $(ARCHWARNINGSXX) $(ARCHOPTIMIZATION) \
-			  $(ARCHCPUFLAGS) $(ARCHXXINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES) -pipe
-CXXPICFLAGS		= $(ARCHPICFLAGS) $(CXXFLAGS)
-CPPFLAGS		= $(ARCHINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES)
-AFLAGS			= $(CFLAGS) -D__ASSEMBLY__
+CFLAGS				= $(ARCHCFLAGS) $(ARCHWARNINGS) $(ARCHOPTIMIZATION) \
+					  $(ARCHCPUFLAGS) $(ARCHINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES) -pipe
+CPICFLAGS			= $(ARCHPICFLAGS) $(CFLAGS)
+CXXFLAGS			= $(ARCHCXXFLAGS) $(ARCHWARNINGSXX) $(ARCHOPTIMIZATION) \
+					  $(ARCHCPUFLAGS) $(ARCHXXINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES) -pipe
+CXXPICFLAGS			= $(ARCHPICFLAGS) $(CXXFLAGS)
+CPPFLAGS			= $(ARCHINCLUDES) $(ARCHDEFINES) $(EXTRADEFINES)
+AFLAGS				= $(CFLAGS) -D__ASSEMBLY__
 
 NXFLATLDFLAGS1		= -r -d -warn-common
 NXFLATLDFLAGS2		= $(NXFLATLDFLAGS1) \
-			  -T$(TOPDIR)/binfmt/libnxflat/gnu-nxflat-pcrel.ld \
-			  -no-check-sections
+					  -T$(TOPDIR)/binfmt/libnxflat/gnu-nxflat-gotoffset.ld \
+					  -no-check-sections
 LDNXFLATFLAGS		= -e main -s 2048
 
-OBJEXT			= .o
-LIBEXT			= .a
-EXEEXT			=
+OBJEXT				= .o
+LIBEXT				= .a
+EXEEXT				=
 
 ifneq ($(CROSSDEV),arm-nuttx-elf-)
-  LDFLAGS		+= -nostartfiles -nodefaultlibs
+  LDFLAGS			+= -nostartfiles -nodefaultlibs
 endif
 ifeq ($(CONFIG_DEBUG_SYMBOLS),y)
-  LDFLAGS		+= -g
+  LDFLAGS			+= -g
 endif
 
 
-HOSTCC			= gcc
+HOSTCC				= gcc
 HOSTINCLUDES		= -I.
-HOSTCFLAGS		= -Wall -Wstrict-prototypes -Wshadow -g -pipe
-HOSTLDFLAGS		=
+HOSTCFLAGS			= -Wall -Wstrict-prototypes -Wshadow -g -pipe
+HOSTLDFLAGS			=
 
